# apex-res

./: .gitignore  .pre-commit-config.yaml  ApexRes.py  Chromatogram.py  DataEntry.py  MainWindow.py  Parameters.py  Pipfile  README.md  Sliders.py  main.py  pyproject.toml
Chromatogram/: FigCanvas.py  Parameters.py  Resolution.py  Sliders.py
Data Entry/: DataEntry.py
MethodOpt/: TwoGradOptimize.py
apex_res/: main.py
apex_res/crud/: user.py
apex_res/models/: user.py
apex_res/optimisers/two_gradient/: data_classes.py  example.py  plot.py  resolution.py  (+1 more)
apex_res/routers/: two_gradient.py  user.py
apex_res/schemas/: two_gradient.py  user.py
app/: main.py
app/crud/: user.py
app/models/: user.py
app/routers/: two_gradient.py  user.py
app/schemas/: two_gradient.py  user.py
app/utils/: security.py
deploy/: api.Dockerfile  docker-compose.yml  frontend.Dockerfile
frontend/: package-lock.json  package.json
frontend/public/: index.html
models/two_gradient/: data_classes.py  equations.py  example.py  plot.py  resolution.py  two_grad_optimise.py
optimisers/two_gradient/: plot.py  resolution.py  two_grad_optimise.py
ui/: main.py
ui/chromatogram/: chromatogram.py  figure_canvas.py
ui/data_entry/: analytes.py  checkbox.py  conditions.py  data_entry.py  header.py  table.py
ui/parameters/: functions.py  group.py  names.py  parameters.py
ui/resolution/: button.py  map.py  resolution.py
ui/slider/: checkboxes.py  data_classes.py  slider.py
ui/styles/: light.qss
ui/update/: check_initialise.py  update.py
ui/utils/: utils.py
(+63 files in other folders)
