[tool.poetry]
name = "apex_res"
version = "0.0.1"
description = "Apex Res is a full-stack liquid chromatography modelling application."
authors = [ "Joseph Smith <joe.smith@zifornd.com>",]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
scipy = "^1.10.1"
fastapi = "^0.95.0"
python-decouple = "^3.8"
sqlalchemy = "^2.0.9"
pydantic = "^1.10.7"
hypercorn = "^0.14.3"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
mypy = "^1.1.1"
pre-commit = "^3.2.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"
